--- a/PhoneTest_4_30/app/src/main/res/layout/activity_test_main.xml
+++ b/PhoneTest_4_30/app/src/main/res/layout/activity_test_main.xml
@@ -56,8 +56,8 @@
         android:id="@+id/x_box"
         android:text="0"
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/left_button"
-        android:layout_toStartOf="@+id/left_button" />
+        android:layout_toStartOf="@+id/up_button"
+        android:layout_toLeftOf="@+id/up_button" />
 
     <EditText
         android:layout_width="wrap_content"
